--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 Homework-03-9MI0800266/Homework/view_1.png
 Homework-03-9MI0800266/Homework/view_2.png
 Homework-03-9MI0800266/Homework/view_3.png
+
+*.zip
